[tool.poetry]
name = "adventofcode24"
version = "0.1.0"
description = "aoc2024 challenges"
authors = ["Helge Dunker <helge.dunker1996@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.0"
pandas = "^2.2.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
